import '@testing-library/jest-dom';
import '__test__/test-utils/setupTests';

import {
  render,
  screen,
} from '@testing-library/react';

import { Provider } from 'react-redux';
import React from 'react';
import RepositoryTable from 'components/repository/RepositoryTable';
import { act } from 'react-dom/test-utils';
import configureMockStore from 'redux-mock-store';
import fetchAPI from 'utils/http/fetchAPI';
import initialState from 'redux/reducers/experiments/initialState';
import thunk from 'redux-thunk';
import userEvent from '@testing-library/user-event';
import SampleTech, { getTechNameToDisplay } from 'const/enums/SampleTech';

jest.mock('utils/http/fetchAPI');
const mockNavigateTo = jest.fn();

jest.mock('utils/AppRouteProvider', () => ({
  useAppRouter: jest.fn(() => ({
    navigateTo: mockNavigateTo,
  })),
}));
const mockStore = configureMockStore([thunk]);

const experiment1 = {
  id: '1',
  name: 'Experiment 1',
  species: 'Human',
  sampleCount: '4',
  cellCount: '23000',
  sampleTechnologies: [SampleTech['10X']],
  description: 'A sample experiment for users to try',
};

const emptyStore = mockStore({
  user: {
    current: {
      attributes: {
        email: 'asd@asd.asd',
      },
    },
  },
  experiments: {
    ...initialState,
    ids: [],
    meta: {
      activeExperimentId: null,
    },
  },
});
const renderRepository = async (storeState, data) => {
  await act(async () => {
    render(
      <Provider store={storeState}>
        <RepositoryTable data={data} />
      </Provider>,
    );
  });
};

describe('RepositoryTable', () => {
  beforeEach(() => {
    jest.clearAllMocks();
    fetchAPI.mockClear();
  });

  it('renders correctly without any experiments', async () => {
    await renderRepository(emptyStore);

    // Expect there to be no experiments
    expect(screen.findByText('There are no experiments in the repository yet.')).toBeDefined();
  });

  it('renders correctly an experiment', async () => {
    await renderRepository(emptyStore, [experiment1]);

    // Expect there to be no experiments
    Object.keys(experiment1).forEach((key) => {
      if (key === 'sampleTechnologies') {
        expect(screen.findByText('10x Chromium')).toBeDefined();
      } else {
        expect(screen.findByText(experiment1[key])).toBeDefined();
      }
    });
  });

  it('renders correctly an experiment with multiple technologies', async () => {
    const experimentWithMultipleTechs = {
      ...experiment1,
      sampleTechnologies: [SampleTech['10X'], SampleTech.Parse],
    };

    await renderRepository(emptyStore, [experimentWithMultipleTechs]);

    // Expect there to be no experiments
    Object.keys(experiment1).forEach((key) => {
      if (key === 'sampleTechnologies') {
        expect(screen.findByText(getTechNameToDisplay(SampleTech['10X']))).toBeDefined();
        expect(screen.findByText(getTechNameToDisplay(SampleTech.PARSE))).toBeDefined();
      } else {
        expect(screen.findByText(experiment1[key])).toBeDefined();
      }
    });
  });

  it('Cloning from example experiments works correctly', async () => {
    await renderRepository(emptyStore, [experiment1]);

    await act(async () => {
      userEvent.click(screen.getByText('Explore'));
    });

    const options = await screen.getAllByRole('menuitem');

    await act(async () => {
      options[1].click();
    });

    expect(fetchAPI.mock.calls).toMatchSnapshot();
  });

  it('Viewing from example experiments works correctly', async () => {
    await renderRepository(emptyStore, [experiment1]);

    await act(async () => {
      userEvent.click(screen.getByText('Explore'));
    });

    const options = await screen.getAllByRole('menuitem');

    await act(async () => {
      options[0].click();
    });

    expect(fetchAPI.mock.calls).toMatchSnapshot();
  });
});
