// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepositoryTable Cloning from example experiments works correctly 1`] = `
[
  [
    "/v2/experiments/1/clone",
    {
      "headers": {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
  [
    "/v2/experiments",
  ],
]
`;

exports[`RepositoryTable Viewing from example experiments works correctly 1`] = `
[
  [
    "/v2/access/1",
    {
      "body": "{"projectUuid":"1","role":"viewer","userEmail":"asd@asd.asd"}",
      "headers": {
        "Content-Type": "application/json",
      },
      "method": "PUT",
    },
  ],
  [
    "/v2/experiments",
  ],
]
`;
